Repository, API, Shop page changes

--- a/DutchTreat/config.json
+++ b/DutchTreat/config.json
@@ -4,5 +4,11 @@
   },
   "ConnectionStrings": {
     "DutchContextDb": "Data Source=(localdb)\\ProjectV13;Initial Catalog=DutchTreatDb;Integrated Security=True;Connect Timeout=30;MultipleActiveResultSets=True"
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning"
+    }
   }
 }
